--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TodoItems</string>
+    <string name="created_at">Created At:</string>
+    <string name="last_modified_at">Last Modified At:</string>
+    <string name="status">Status:</string>
 </resources>
